Fix button width on narrow screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1692,7 +1692,7 @@ input, select, textarea {
             button,
             a.anchor-button,
             .button {
-                width: 100%;
+                max-width: 100%;
             }
 
         }
